name:              dohaskell
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src
    exposed-modules: Application
                     CodeExecutor
                     Control.Applicative.Extras
                     Data.Map.Extras
                     Foundation
                     Handler.Home
                     Handler.Function
                     Handler.Admin
                     Handler.Executor
                     Function.Dao
                     Function.Ydao
                     Function.Utils
                     Module.Dao
                     Module.Ydao
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     System.Random.Extras

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: aeson
                 , base                          >= 4          && < 5
                 , bytestring                    >= 0.9
                 , conduit                       >= 1.0
                 , containers                    >= 0.4
                 , data-default
                 , directory                     >= 1.1
                 , either                        >= 0.1
                 , fast-logger                   >= 0.3
                 , filepath                      >= 1.3
                 , hamlet                        >= 1.1
                 , hastache                      >= 0.5
                 , hjsmin                        >= 0.1
                 , http-conduit                  >= 1.9
                 , monad-control                 >= 0.3
                 , monad-logger                  >= 0.3
                 , MonadRandom                   >= 0.1
                 , mtl                           >= 1.0
                 , persistent                    >= 1.2
                 , persistent-sqlite             >= 1.2
                 , persistent-template           >= 1.2
                 , plugins                       >= 1.5
                 , process                       >= 1.1
                 , QuickCheck                    >= 2.6
                 , random                        >= 1.0
                 , regex-compat                  >= 0.95
                 , safe                          >= 0.3
                 , shakespeare-css               >= 1.0
                 , shakespeare-js                >= 1.0.2
                 , shakespeare-text              >= 1.0
                 , template-haskell
                 , temporary                     >= 1.1
                 , text                          >= 0.11
                 , wai-extra                     >= 1.3
                 , warp                          >= 1.3
                 , yaml                          >= 0.8
                 , yesod                         >= 1.2
                 , yesod-auth                    >= 1.2
                 , yesod-core                    >= 1.2
                 , yesod-form                    >= 1.3
                 , yesod-static                  >= 1.2

executable         dohaskell
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , dohaskell
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , dohaskell
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
